fixed qr background in dark mode for easy scanning

--- a/src/css/input.css
+++ b/src/css/input.css
@@ -3,5 +3,5 @@
 @tailwind utilities;
 
 * {
-    @apply transition-all duration-500 ease-in;
+    @apply transition-all duration-200 ease-in;
 }
