--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -627,6 +627,10 @@ video {
   border-radius: 0.25rem;
 }
 
+.border {
+  border-width: 1px;
+}
+
 .bg-green-200 {
   --tw-bg-opacity: 1;
   background-color: rgb(229 235 178 / var(--tw-bg-opacity));
@@ -668,6 +672,10 @@ video {
 
 .p-2 {
   padding: 0.5rem;
+}
+
+.p-3 {
+  padding: 0.75rem;
 }
 
 .py-3 {
@@ -798,7 +806,7 @@ video {
 * {
   transition-property: all;
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
-  transition-duration: 500ms;
+  transition-duration: 200ms;
   transition-timing-function: cubic-bezier(0.4, 0, 1, 1);
 }
 
